# sqlstuff

./: Cargo.toml
docs/: Errors.txt  Redix.txt  TestRowInsert.linq  allbooks.xml  benchmark.txt  database.md  rust cli example.txt  rust-analyzer.txt  sqlx.txt  winauthentication.txt  winauthentication.txt.bak
src/: main.rs
