[package]
name = "sqlstuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
tokio = "1.17.0"
tokio-util =  { version = "0.7.1", features = ["compat"] }
tiberius = "0.8.0"
bb8 = "0.8.0"
bb8-tiberius = "0.10.0"
once_cell = "1.10.0"
anyhow = "1.0.56"
tiberius-derive = "0.0.2"
chrono = "0.4.19"